Fixing class loader issues. Preparing RC0 release. Java ME fixes. Report fixes. Packaging simplifications.